--- a/excersise1.html
+++ b/excersise1.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <title></title>
+        <script src="moment.js"></script>
     </head>
 
     <body>
 
-    </body>
+
     <script>
         
 //Complete the following problems: 
@@ -21,6 +22,7 @@ Declare a variable for the current temperature then store the Celsius temperatur
 
 
 //converts temperature from celcius to fahrenheit
+/*
 function convertToF(fahrenheit) {
    var fTemp = fahrenheit;
    var conToCels = Math.round(5/9 * (fTemp - 32));
@@ -37,20 +39,72 @@ function convertToC(celsius) {
 }
 
 convertToF(56);
-convertToC(58);
+convertToC(58);*/
 
 
 /************************************************************* */
 // Problem 2:
-/* Write a JavaScript function to determine if someone is old enough to vote. 
-Declare a variable for age and write a conditional statement for whether that age is old enough to vote. Console log "yes" or "no"*/
+/* Write a JavaScript function to determine if someone = old enough to vote. 
 
-//your code...
+Declare a variable for age and write a conditional statement for whether that age = old enough to vote. 
 
-var 
+Console log "yes" or "no"*/
 
+
+//must be at least 18 years old to vote
+
+//Input: "01/01/1985"
+//Output: boolean true/false whether this person is 18 years at least or older
+
+// 17 == '17' => true
+//17 === '17' => false
+'01/01/2018'
+function isOldEnoughToVote(dob) {
+    //COnvert dob string to date object
+    var birthDate = new Date(dob);
+    var today = new Date();
+
+    //if year is 16 years ago or less return false
+    var birthYear = birthDate.getFullYear();
+    var currentYear = today.getFullYear();
+    if(currentYear - birthYear < 17) {
+        return false;
+    }
+    //if it is more than 18 reutrn true
+    if(currentYear - birthYear > 17) {
+        return true;
+    }//Because of return statements if we make it here in code we know the number MUST be 17
+    //If year is exctly 17 --special case
+    //compare to see if the current month is greaterthan birth month if so then van vote, if not if above then cant vote if same
+    var birthMonth = birthDate.getMonth();
+    var currentMonth = today.getMonth();
+    if(birthMonth < currentMonth) {
+        return true;
+    }
+    if(birthMonth > currentMonth) {
+        return false;
+    }
+
+    //If we have made it here in our code we know dob in this year and this month, compare days
+    var birthDay= birthDate.getDate();
+    var currentDay = today.getDate();
+    if(birthDay > currentDay) {
+        return false;
+    }
+   return true;
+}
+ function betterIs18(dob) {
+    var birthdate = moment(dob);
+    var wouldBe18On = moment().subtract(18, 'years');
+    return birthdate.isBefore(wouldBe18On);
+ }
+
+
+/////////////////////
 
 
 
     </script>
+    </body>
+
 </html>
